<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingBottom="16dp"
    android:paddingRight="16dp"
    android:background="@color/colorPrimary"
    tools:context="com.example.android.flightapp.MainActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <TextView
        android:id="@+id/departure_airport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/departure_airport"
        android:textColor="@color/ghostWhite"
        android:textSize="56sp"
        app:layout_constraintHorizontal_bias="0.03"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintVertical_bias="0.014" />

    <TextView
        android:id="@+id/departure_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/departure_city"
        android:textColor="@color/ghostWhite"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="@id/departure_airport"
        app:layout_constraintTop_toBottomOf="@id/departure_airport" />

    <TextView
        android:id="@+id/arrival_airport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/arrival_airport"
        android:textColor="@color/ghostWhite"
        android:textSize="56sp"
        app:layout_constraintHorizontal_bias="0.952"
        app:layout_constraintLeft_toRightOf="@id/arrival_airport"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintVertical_bias="0.014" />

    <TextView
        android:id="@+id/arrival_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/arrival_city"
        android:textColor="@color/ghostWhite"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="@id/arrival_airport"
        app:layout_constraintTop_toBottomOf="@id/arrival_airport" />

    <android.support.design.widget.TabLayout
        android:id="@+id/trip_type_tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="56dp"
        android:layout_marginRight="56dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/departure_city"
        app:tabIndicatorColor="@color/ghostWhite">

    </android.support.design.widget.TabLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:background="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trip_type_tab"/>

    <LinearLayout
        android:id="@+id/trip_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewpager">

        <TextView
            android:id="@+id/departure"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/departure" />

        <TextView
            android:id="@+id/return_trip"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/return_trip" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/dates_spinners"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trip_type">
<!--

        <DatePicker
            android:id="@+id/departure_date_picker"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

        </DatePicker>

        <DatePicker
            android:id="@+id/return_date_picker"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

        </DatePicker>
-->

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/departure_date_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

        </android.support.v7.widget.AppCompatSpinner>

        <android.support.v7.widget.AppCompatSpinner

            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">

        </android.support.v7.widget.AppCompatSpinner>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/passengers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dates_spinners">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/adults"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adults"
                android:layout_marginBottom="8dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/children"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/children"
                android:layout_marginBottom="8dp"/>

        </LinearLayout>



    </LinearLayout>

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/passengers_spinner"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passengers">

    </android.support.v7.widget.AppCompatSpinner>

    <TextView
        android:id="@+id/cabin_class"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cabin_class"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passengers_spinner" />

    <android.support.design.widget.TabLayout
        android:id="@+id/cabin_class_tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/cabin_class"
        app:tabIndicatorColor="@color/ghostWhite">

        <android.support.design.widget.TabItem
            android:id="@+id/economy_class"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/economy_class">
        </android.support.design.widget.TabItem>

        <android.support.design.widget.TabItem
            android:id="@+id/business_class"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/business_class">
        </android.support.design.widget.TabItem>

        <android.support.design.widget.TabItem
            android:id="@+id/first_class"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_class">
        </android.support.design.widget.TabItem>

    </android.support.design.widget.TabLayout>

</android.support.constraint.ConstraintLayout>
