<?xml version="1.0" encoding="utf-8"?><!-- Layout for a single list item -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:background="@android:color/transparent"
    android:minHeight="@dimen/list_item_height"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@android:color/transparent"
        android:minHeight="@dimen/list_item_height">

        <ImageView
            android:id="@+id/departure_airline_image"
            android:layout_width="@dimen/list_item_height"
            android:layout_height="@dimen/list_item_height"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="8dp"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/departure_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/departure_airline_image"
            android:layout_toRightOf="@id/departure_airline_image"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            tools:text="@string/departure_time" />

        <TextView
            android:id="@+id/departure_locations_airline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/departure_time"
            android:layout_toRightOf="@id/departure_airline_image"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/darker_gray"
            android:textSize="12sp"
            tools:text="@string/departure_locations_airline" />

        <TextView
            android:id="@+id/departure_flight_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@id/departure_time"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            tools:text="@string/departure_flight_duration" />

        <TextView
            android:id="@+id/departure_non_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/departure_flight_duration"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/darker_gray"
            android:textSize="12sp"
            tools:text="@string/departure_non_stop" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@android:color/transparent"
        android:minHeight="@dimen/list_item_height">

        <ImageView
            android:id="@+id/arrival_airline_image"
            android:layout_width="@dimen/list_item_height"
            android:layout_height="@dimen/list_item_height"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/arrival_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/arrival_airline_image"
            android:layout_toEndOf="@id/arrival_airline_image"
            android:layout_toRightOf="@id/arrival_airline_image"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            tools:text="@string/arrival_time" />

        <TextView
            android:id="@+id/arrival_locations_airline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/arrival_time"
            android:layout_toRightOf="@id/arrival_airline_image"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/darker_gray"
            android:textSize="12sp"
            tools:text="@string/arrival_locations_airline" />

        <TextView
            android:id="@+id/arrival_flight_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@id/arrival_time"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            tools:text="@string/arrival_flight_duration" />

        <TextView
            android:id="@+id/arrival_non_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/arrival_flight_duration"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/darker_gray"
            android:textSize="12sp"
            tools:text="@string/arrival_non_stop" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@android:color/transparent">

        <TextView
            android:id="@+id/flight_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            tools:text="@string/flight_cost"
            android:layout_marginLeft="8dp"/>

        <TextView
            android:id="@+id/flight_summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/flight_cost"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/darker_gray"
            android:textSize="12sp"
            android:layout_alignBottom="@id/flight_cost"
            tools:text="@string/flight_summary" />



    </RelativeLayout>

</LinearLayout>
