<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/royalBlue"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp">

    <LinearLayout
        android:id="@+id/trip_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/travel_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/travel_date"
            android:textColor="@color/linkWater" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/departure_date_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/passengers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/adults"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/adults"
                android:textColor="@color/linkWater" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginBottom="16dp"
                    android:background="@color/ghostWhite"
                    android:onClick="decrementAdult"
                    android:text="@string/decrement"
                    android:textAllCaps="true"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/adult_number_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/zero"
                    android:textColor="@color/linkWater"
                    android:textSize="16sp" />

                <Button
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginBottom="8dp"
                    android:background="@color/ghostWhite"
                    android:onClick="incrementAdult"
                    android:text="@string/increment"
                    android:textAllCaps="true"
                    android:textColor="@android:color/black" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/children"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/children"
                android:textColor="@color/linkWater" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginBottom="16dp"
                    android:background="@color/ghostWhite"
                    android:onClick="decrementAdult"
                    android:text="@string/decrement"
                    android:textAllCaps="true"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/children_number_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/zero"
                    android:textColor="@color/linkWater"
                    android:textSize="16sp" />

                <Button
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginBottom="8dp"
                    android:background="@color/ghostWhite"
                    android:onClick="incrementAdult"
                    android:text="@string/increment"
                    android:textAllCaps="true"
                    android:textColor="@android:color/black" />

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

    <!--<android.support.v7.widget.AppCompatSpinner
        android:id="@+id/passengers_spinner"
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <TextView
        android:id="@+id/cabin_class"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cabin_class"
        android:textColor="@color/linkWater"/>-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingRight="16dp">

        <android.support.design.widget.TabLayout
            android:id="@+id/one_way_cabin_class_tab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabIndicatorColor="@color/ghostWhite" />

        <android.support.v4.view.ViewPager
            android:id="@+id/one_way_cabin_class_viewpager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@android:color/white" />

    </LinearLayout>

</LinearLayout>